0027381: Visualization - update description of method AIS_InteractiveContext::SetPixelTolerance()